<resources>
    <string name="app_name">321浏览器</string>
    <string name="ApplicationRecommend">321浏览器(牛)</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="button_setting">设置</string>
    <string name="button_feedback">反馈</string>
    <string name="button_about">关于</string>
    <string name="menuGood">浏览器</string>
    <string name="menuNews">直播</string>
    <string name="menuStudio">本地</string>
    <string name="menuBlog">娱乐</string>
    <string name="DetailsGood">太棒了</string>
    <string name="DetailsBed">一般般</string>
    <string name="DetailsCollect">收藏</string>
    <string name="DetailsShare">分享</string>
    <string name="DetailsDiscuss">评论</string>
    <string name="user_center">个人中心</string>
    <string name="user_login_alert">你终于来啦，快登录吧</string>
    <string name="user_key_alert">输入你的密钥</string>
    <string name="user_bind_btn">绑定</string>
    <string name="user_qr_scan_btn">二维码扫描登陆</string>
    <string name="user_alert">请在web端登陆后，寻找你的密钥：\nhttp://my.321科技.cn/admin/profile/auth.html\n会员中心>设置>客户端密钥（如下图）</string>
    <string name="user_button_alert">登陆后，你可以享有以下功能</string>
    <string name="user_level_alert">勋章</string>
    <string name="user_login_another">换一种方式登录</string>
    <string name="user_logout">注销</string>
    <string name="user_title">321科技</string>
    <string name="user_cancel">取消</string>
    <string name="user_remember">记住密码</string>
    <string name="user_enter">立即登录</string>
    <string name="user_user_empty">用户名不能为空!</string>
    <string name="user_pwd_empty">密码不能为空!</string>
    <string name="user_login_prompt">请先登录</string>
    <string name="user_login_enter_key">请先输入密钥</string>
    <string name="user_ok">确定</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="press_again_exit">再按一次退出</string>
    <string name="httpError">连接失败</string>
    <string name="httpisNull">没有网络</string>
    <string name="user_center_error">请先登录再进入用户中心</string>
    <string name="user_username">输入用户名</string>
    <string name="user_pwd">输入密码</string>
    <string name="user_login_error">用户名或者密码错误!</string>
    <string name="user_loginKey_error">错误密钥!</string>
    <string name="user_loginInfo_error">获取信息失败，\n请尝试重新登录。</string>
    <string name="about">关于我们</string>
    <string name="about_title1">321浏览器</string>
    <string name="about_title2">V 1.1.1.3</string>
    <string name="about_ad">传   递   正  能  量</string>
    <string name="about_intro">[应用简介]\n 1、内置万能播放器。\n
        2、断点续传：支持上次下不完，接着下。\n
        3、下载速度快：比同行软件下载快。\n
        4、支持国内全部视频网站的视频点播。\n
        5、支持中央电视台直接在浏览器直播。\n
      
    </string>
    <string name="about_me">[研发团队]\n 张学东、吴家丽、梁俊、杨光福</string>
    <string name="about_qq">[官方QQ交流群]：150864794</string>
    <string name="about_story">[应用故事]\n321科技的理念是‘让移动开发更简单’，如何让移动开发者更简单是我们不断思考和探索的，我们认为有组织、有体系的内容对开发者的学习和成长都是最有价值的，于是大家都希望有这么一款让我们零碎时间里学习到最有价值的知识，于是321科技客户端诞生了!</string>
    <string name="about_thanks">[致谢]\n321科技客户端里边的内容资源都是由321科技开发者社区的忠实用户所提供的，并由321科技开发者社区开发进行组织和展示，感谢其中包括的所有人，感谢你们提供的内容，有了你们321科技会更精彩！</string>
    <string name="about_Bottom">[官网]</string>
    <string name="about_tontact">联系我们：</string>
    <string name="about_sina">http://weibo.cn/321browser</string>
    <string name="about_weixin"> 321科技</string>
    <string name="detail_prompt">写评论</string>
    <string name="detail_enter">发表</string>
    <string name="discuss_succeed">发表成功</string>
    <string name="discuss_fail">发表失败</string>
    <string name="query_prompt">请输入关键字</string>
    <string name="feedback_submit">提交</string>
    <string name="feedback_input_content">请输入您的反馈意见</string>
    <string name="feedback_back">返回</string>
    <string name="user_center_get_info_error">获取信息错误</string>
    <string name="user_center_my_Collect">我的收藏</string>
    <string name="user_center_my_Intro">个人简介</string>
    <string name="user_center_exit">退出功能</string>
    <string name="user_center_e_coin">e币:%s</string>
    <string name="user_center_e_reputation">e望:%s</string>
    <string name="scan_tip">请将二维码置于取景框内扫描</string>
    <string name="scan_retry">二维码扫描出错啦,请重新扫描</string>
    <string name="scan_title">扫一扫</string>
    <string name="music">音乐</string>
    <string name="novel">小说</string>
    <string name="news">新闻</string>
    <string name="video">视频</string>
    <string name="pictures">美图</string>
    <string name="software">软件</string>
    <string name="joke">笑话</string>
    <string name="weather">天气</string>
    <string name="retry">重试</string>
    <string name="loadvideotext">加载中，请稍候...</string>
    <string name="net_outage_tip">网络中断，请检查网络</string>
    <string name="tips">提示</string>
    <string name="playretry">播放出错了，是否重试?</string>
    <string name="playretry_neterror">网络异常，是否重试?</string>
    <string name="player_exit">退出</string>
    <string name="setplay_for_soft">1，当前使用【系统解码】播放视频；\n2，如果播放时出现：无法播放视频、有声音没有图像等等情况，请点击按钮，将切换到软解码播放</string>
    <string name="setplay_for_system">1，当前使用【软解码】播放视频；\n2，如果播放时不是很流畅，达不到你的视听需求，请点击按钮，将切换到系统解码播放</string>
    <string name="play_comper">播放完成，是否进入【321浏览器】</string>
    <string name="exit_player_text">正在退出播放...</string>
    <string name="netdown">网络连接失败!</string>
    <string name="net_3g">您正在使用3G/2G网络!</string>
    <string name="net_is_3g_or_2g">当前是3G网络，会产生流量，是否继续使用</string>
    <string name="player_sure_3g_tip">继续使用</string>
    <string name="player_exit_3g_tip">下次再说</string>
    <string name="init_decoders">初始化解码器...</string>
    <string name="no_vide_file">没有视频文件</string>
    <string name="list_refresh">视频列表已刷新！</string>
    <string name="tip_network">亲，网络异常，请检查网络哦！</string>
    <string name="ApplicationName">321Browser</string>
    <string name="ApplicationNameUrl">Zirco - %s</string>
    <string name="ApplicationDescription">Zirco is an open-source browser for Android.</string>
    <string name="AboutActivity.Title">About</string>
    <string name="AboutActivity.VersionText">Version:</string>
    <string name="AboutActivity.UrlTextValue">http://code.google.com/p/zirco-browser/</string>
    <string name="AboutActivity.LicenseText">License:</string>
    <string name="AboutActivity.LicenseTextValue">GPL v3</string>
    <string name="Main.MenuAddBookmark">Add bookmark</string>
    <string name="Main.MenuShowBookmarks">Bookmarks</string>
    <string name="Main.MenuShowHistory">History</string>
    <string name="Main.MenuShowDownloads">Downloads</string>
    <string name="Main.MenuPreferences">Preferences</string>
    <string name="Main.MenuOpen">Open</string>
    <string name="Main.MenuOpenNewTab">Open in new tab</string>
    <string name="Main.MenuDownload">Download</string>
    <string name="Main.DownloadStartedMsg">Download start.</string>
    <string name="Main.DownloadFinishedMsg">Download complete.</string>
    <string name="Main.DownloadErrorMsg">Download error: %s</string>
    <string name="Main.ToastTabSwitchMessage">Tab %s</string>
    <string name="Main.ToastTabSwitchFullMessage">Tab %1$s: %2$s</string>
    <string name="Main.VndErrorTitle">Unable to open url</string>
    <string name="Main.VndErrorMessage">You may not have an application able to open this url: %s.</string>
    <string name="BookmarksListActivity.Title">Zirco Browser - Bookmarks</string>
    <string name="BookmarksListActivity.MenuSortMode">Sort by</string>
    <string name="BookmarksListActivity.MenuAddBookmark">Add bookmark</string>
    <string name="BookmarksListActivity.Empty">No bookmarks</string>
    <string name="BookmarksListActivity.MenuOpenInTab">Open in new tab</string>
    <string name="BookmarksListActivity.MenuEditBookmark">Edit bookmark</string>
    <string name="BookmarksListActivity.MenuDeleteBookmark">Delete bookmark</string>
    <string name="BookmarksListActivity.AlphaSortMode">Alphabetical</string>
    <string name="BookmarksListActivity.RecentSortMode">Most recent</string>
    <string name="EditBookmarkActivity.Title">Edit bookmark</string>
    <string name="EditBookmarkActivity.TitleAdd">Add bookmark</string>
    <string name="EditBookmarkActivity.TitleLabel">Name:</string>
    <string name="EditBookmarkActivity.UrlLabel">Location:</string>
    <string name="HistoryListActivity.Title">Zirco Browser - History</string>
    <string name="HistoryListActivity.MenuOpenInTab">Open in new tab</string>
    <string name="HistoryListActivity.MenuDelete">Delete</string>
    <string name="DownloadListActivity.Title">Zirco Browser - Downloads</string>
    <string name="DownloadListActivity.Empty">No downloads</string>
    <string name="DownloadListActivity.Aborted">%s (Canceled)</string>
    <string name="DownloadListActivity.Finished">%s (Finished)</string>
    <string name="AdBlockerWhiteListActivity.Title">Zirco Browser - Ad blocker white list</string>
    <string name="AdBlockerWhiteListActivity.Empty">White list is empty.</string>
    <string name="AdBlockerWhiteListActivity.AddMessage">Add to white list</string>
    <string name="AdBlockerWhiteListActivity.ClearMessage">Clear white list</string>
    <string name="PreferencesActivity.GeneralSettingsCategoryTitle">General settings</string>
    <string name="PreferencesActivity.HomePagePreferenceTitle">Home page</string>
    <string name="PreferencesActivity.HomePagePreferenceSummary">Define your default home page.</string>
    <string name="PreferencesActivity.FullScreenPreferenceTitle">Full screen</string>
    <string name="PreferencesActivity.FullScreenPreferenceSummary">Display browser in full screen mode (need application restart).</string>
    <string name="PreferencesActivity.ShowToastOnTabSwitchPreferenceTitle">Show alert on tab switch</string>
    <string name="PreferencesActivity.ShowToastOnTabSwitchPreferenceSummary">If checked, a small alert is briefly show when switching tabs.</string>
    <string name="PreferencesActivity.BrowserSettingsCategoryTitle">Browser settings</string>
    <string name="PreferencesActivity.HistorySizePreferenceTitle">History size</string>
    <string name="PreferencesActivity.HistorySizePreferenceSummary">History size in days.</string>
    <string name="PreferencesActivity.EnableJavascriptPreferenceTitle">Enable JavaScript</string>
    <string name="PreferencesActivity.EnableJavascriptPreferenceSummary">Enable or disable JavaScript.</string>
    <string name="PreferencesActivity.LoadImagesPreferenceTitle">Load images</string>
    <string name="PreferencesActivity.LoadImagesPreferenceSummary">Enable or disable image loading.</string>
    <string name="PreferencesActivity.PrivacyPreferenceTitle">Privacy settings</string>
    <string name="PreferencesActivity.PrivacyPreferenceSummary">Manage privacy settings.</string>
    <string name="PreferencesActivity.EnableFormDataPreferenceTitle">Save forms data</string>
    <string name="PreferencesActivity.EnableFormDataPreferenceSummary">Enable or disable form data saving.</string>
    <string name="PreferencesActivity.EnablePasswordsPreferenceTitle">Save passwords</string>
    <string name="PreferencesActivity.EnablePasswordsPreferenceSummary">Enable or disable password saving.</string>
    <string name="PreferencesActivity.EnableCookiesPreferenceTitle">Allow cookies</string>
    <string name="PreferencesActivity.EnableCookiesPreferenceSummary">Enable or disable cookies.</string>
    <string name="player_download">下载管理</string>
    <string name="down_btn_edit">编辑</string>
    <string name="down_btn_set">下载设置</string>
    <string name="sizeShow">已下载：0.00G 剩余空间：0.00G</string>
    <string name="downloaditemnull">什么也没有呦</string>
    <string name="copyright">"Copyright © 2013 321浏览器   "</string>
</resources>