<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/umeng_fb_conversation_bg"
    android:orientation="vertical"
    android:paddingTop="0dip" >

    <RelativeLayout
        android:id="@+id/download_activity_titlebar"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_height"
        android:layout_alignParentTop="true"
        android:background="@drawable/tb_background_top" >

        <LinearLayout
            android:id="@+id/downloadButtonLayout"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/download_back"
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:src="@drawable/umeng_fb_back_selector" >
            </ImageView>
        </LinearLayout>

        <TextView
            android:id="@+id/download_activity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:gravity="center"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/player_download"
            android:textColor="@color/white"
            android:textSize="20sp" >
        </TextView>
    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_shadow"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#666666" />

    <LinearLayout
        android:id="@+id/button"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_below="@id/download_activity_titlebar"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/set_button"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/new_button_press_selector"
            android:gravity="center"
            android:paddingBottom="2dip"
            android:text="@string/down_btn_set"
            android:textColor="#666666"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/iv_shadow"
            android:layout_width="1dip"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:background="#666666"
            android:gravity="center"
            android:paddingBottom="2dip" />

        <Button
            android:id="@+id/edit_button"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/new_button_press_selector"
            android:gravity="center"
            android:paddingBottom="2dip"
            android:text="@string/down_btn_edit"
            android:textColor="#666666"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sizeView"
        android:layout_width="fill_parent"
        android:layout_height="30dip"
        android:layout_marginTop="2dip"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="#DCDCDC"
            android:gravity="center" >

            <TextView
                android:id="@+id/sizeShow"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sizeShow"
                android:textColor="#666666"
                android:textSize="13sp" />
        </RelativeLayout>
    </LinearLayout>

    <cn.hi321.browser.download.FixedViewFlipper
        android:id="@+id/DownloadViewFlipper"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
         android:layout_below="@id/button"
         android:layout_above="@id/sizeView"
        android:layout_weight="1" >

        <ListView
            android:id="@+id/DownloadListView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:cacheColorHint="#00000000"
            android:divider="#A1A1A1"
            android:dividerHeight="0.5dip"
            android:gravity="left" >
        </ListView>

        <LinearLayout
            android:id="@+id/tv_downitem_none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:visibility="visible" >

            <ImageView
                android:layout_width="200dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:background="@drawable/bg_wuxiazai" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dip"
                android:text="@string/downloaditemnull"
                android:textColor="#888888"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dip"
                    android:text="前往“"
                    android:textColor="#888888"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/download_start_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dip"
                    android:text="@string/app_name"
                    android:textColor="#2773ca"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dip"
                    android:text="”下载任务吧"
                    android:textColor="#888888"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </cn.hi321.browser.download.FixedViewFlipper>

</RelativeLayout>